--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,8 @@
 $primary: rgb(87, 3, 24);
 
 html {
-  overflow-y: auto;
-  overflow-x: hidden;
+  //overflow-y: auto;
+  //overflow-x: hidden;
 }
 
 body {
